update 2017 11 21 Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/hr/hr_admin.xhtml
+++ b/src/main/webapp/hr/hr_admin.xhtml
@@ -53,7 +53,8 @@
                                 <p:panel header="(II) Manage Staff"  style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" ajax="false" value="1) Staff Master" 
-                                                        action="/hr/hr_staff_admin" onclick="onSubmitButton();"/>                                 
+                                                         action="/hr/hr_staff_admin" onclick="onSubmitButton();" 
+                                                         actionListener="#{hrReportController.listnerCheckStaffRetierd()}"/>                                 
                                         <p:commandButton styleClass="linkButton" ajax="false" value="2) Change Staff" 
                                                         action="/hr/hr_change_staff" onclick="onSubmitButton();"/>                             
                                         <p:commandButton styleClass="linkButton" ajax="false" value="3) Manage Staff Category" 
