--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -272,7 +272,10 @@
                                                          action="hr_report_epf_detail" 
                                                          actionListener="#{hrReportController.makeNull()}" 
                                                          styleClass="linkButton" ajax="false" />
-
+                                        <p:commandButton value="(5) Employee Retierd Details" 
+                                                         action="hr_report_employee_detail_1" 
+                                                         actionListener="#{hrReportController.makeNull()}" 
+                                                         styleClass="linkButton" ajax="false" />
                                     </h:panelGrid>
 
                                 </p:panel>
