--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -103,6 +103,9 @@
                                                      value="3)Purchase Summary (Credit / Cash )" action="pharmacy_report_purchase_detail.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
                                                      value="4)Purchase Summary By Supplier (Credit / Cash)" action="pharmacy_report_purchase_detail_by_supplier.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                    <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
+                                                     value="5)Purchase Bill Item" 
+                                                     action="pharmacy_report_purchase_bill_item.xhtml" />
 
                                 </p:panel>
                                 <p:panel header="8) BHT ISSUE" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
