--- a/src/main/webapp/reportLab/turn_over_time_bills.xhtml
+++ b/src/main/webapp/reportLab/turn_over_time_bills.xhtml
@@ -72,7 +72,7 @@
                                 <p:outputLabel value="#{pi.billItem.bill.deptId}" ></p:outputLabel>
                             </p:column>
                             <p:column headerText="Bill Type" >
-                                <p:outputLabel value="#{pi.billItem.bill.billType.label}" ></p:outputLabel>
+                                <p:outputLabel value="#{pi.billItem.bill.billType}" ></p:outputLabel>
                             </p:column>
                             <p:column headerText="toDepartment" >
                                 <p:outputLabel value="#{pi.billItem.bill.toDepartment.name}" ></p:outputLabel>
