--- a/src/main/webapp/store/store_report_unit_issue_bill.xhtml
+++ b/src/main/webapp/store/store_report_unit_issue_bill.xhtml
@@ -36,6 +36,7 @@
                         <h:panelGrid columns="40">
                             <p:spacer width="80" height="1"/>
                             <p:commandButton ajax="false" value="Fill" action="#{storeReportsTransfer.fillDepartmentUnitIssueByBillStore}" ></p:commandButton>
+                            <p:commandButton ajax="false" value="Fill2" action="#{storeReportsTransfer.createStoreIssueReport}" ></p:commandButton>
 
                             <p:commandButton value="Print" ajax="false" action="#" >
                                 <p:printer target="gpBillPreview" ></p:printer>
