--- a/src/main/webapp/patient_registration.xhtml
+++ b/src/main/webapp/patient_registration.xhtml
@@ -16,7 +16,7 @@
 
                 <h:form>
 
-                    <p:panel header="Manage Patients" styleClass="alignTop verticalAndHorizontalCenteringLarge"
+                    <p:panel header="Manage Patients" styleClass="alignTop"
                              style="height: 600px;">
                         <h:panelGrid columns="2" >
 
@@ -25,7 +25,12 @@
                                 <p:panel id="panelSearch" header="Search Patients" >
                                     <f:facet name="header" >
                                         <h:outputLabel value="Search Patients" />
-
+                                        <p:commandButton id="btnAddPt" 
+                                                         style="float: right;" 
+                                                         value="Add New Patient" process="btnAddPt" 
+                                                         update="acPt :#{p:component('panelDetails')} :#{p:component('patientDetail')} " 
+                                                         action="#{patientController.prepareAddReg()}" onclick="onSubmitButton();" >
+                                        </p:commandButton>
                                         <p:commandButton id="btnDeletePt" 
                                                          style="float: right;" 
                                                          value="Delete" process="btnDeletePt" 
@@ -34,8 +39,8 @@
                                                          rendered="#{webUserController.hasPrivilege('ClinicalPatientDelete')}">
                                         </p:commandButton>
 
-                                       <!--                                        <p:commandButton id="btnPrintCard" action="/clinical/clinical_print_barcode" style="float: right;" value="Print Card" ajax="false" onclick="onSubmitButton();">
-                                                                                </p:commandButton>-->
+                                        <!--                                        <p:commandButton id="btnPrintCard" action="/clinical/clinical_print_barcode" style="float: right;" value="Print Card" ajax="false" onclick="onSubmitButton();">
+                                                                                 </p:commandButton>-->
 
                                     </f:facet>
 
@@ -83,7 +88,7 @@
                                 </p:panel>
 
                                 <p:panel>
-                                    <p:commandButton id="btnAddNewDoc" type="button" value="New Membership" onclick="dlg.show();"  process="btnAddNewDoc" update="#{p:component('panDoc')}" />  
+                                    <p:commandButton disabled="true" id="btnAddNewDoc" type="button" value="New Membership" onclick="dlg.show();"  process="btnAddNewDoc" update="#{p:component('panDoc')}" />  
 
                                     <p:dialog id="panDoc" header="Membership Registration" widgetVar="dlg" resizable="false">
 
@@ -169,12 +174,7 @@
                                     <h:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" />
                                     <p:commandButton  process="panelDetails" update="acPt" value="Save" 
                                                       action="#{patientController.saveSelected()}"></p:commandButton>
-                                    <p:commandButton id="btnAddPt" 
-                                                     style="float: right;" 
-                                                     value="Add New Patient" process="btnAddPt" 
-                                                     update="acPt :#{p:component('panelDetails')} :#{p:component('patientDetail')} " 
-                                                     action="#{patientController.prepareAddReg()}" onclick="onSubmitButton();" >
-                                    </p:commandButton>
+
                                 </f:facet>
 
 
