--- a/src/main/webapp/resources/inward/bht.xhtml
+++ b/src/main/webapp/resources/inward/bht.xhtml
@@ -83,7 +83,7 @@
                         </div>
 
 
-                        <div class="cel1R1L" style="margin-top: 22%;">
+                        <div class="cel1R1L" style="margin-top: 22%;max-width: 300px;">
                             <p:outputLabel   value="Name :" />
                             <p:outputLabel  value="#{cc.attrs.admission.patient.person.nameWithTitle}" />
 
