--- a/src/main/webapp/store/store_summery_index.xhtml
+++ b/src/main/webapp/store/store_summery_index.xhtml
@@ -31,25 +31,26 @@
                                 </p:panel>
                                 <p:panel header="7) Issue Report " style="width: 400px; height: auto" collapsed="true" toggleable="true">
                                     <h:panelGrid columns="1" > 
-                                <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit Issue by bill" action="store_report_unit_issue_bill.xhtml" actionListener="#{storeSaleReport.makeNull}"/>
-                                <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit by Department" action="store_report_unit_issue_department.xhtml" actionListener="#{storeSaleReport.makeNull}"/>
-                                <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit Issue by Department - Summary" action="store_report_unit_issue_department_by_departmaent" actionListener="#{storeSaleReport.makeNull}"/>
-                                <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit Issue by Department - Detailed" action="store_report_unit_issue_department_by_departmaent_item_vice" actionListener="#{storeSaleReport.makeNull}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit Issue by bill" action="store_report_unit_issue_bill.xhtml" actionListener="#{storeSaleReport.makeNull}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit by Department" action="store_report_unit_issue_department.xhtml" actionListener="#{storeSaleReport.makeNull}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit Issue by Department - Summary" action="store_report_unit_issue_department_by_departmaent" actionListener="#{storeSaleReport.makeNull}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Department Unit Issue by Department - Detailed" action="store_report_unit_issue_department_by_departmaent_item_vice" actionListener="#{storeSaleReport.makeNull}"/>
 
-                                <p:commandButton styleClass="linkButton" ajax="false"
-                                                 value="Department Unit Issue by Bill Item" 
-                                                 action="store_report_unit_issue_bill_item.xhtml" disabled="false"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false"
+                                                         value="Department Unit Issue by Bill Item" 
+                                                         action="store_report_unit_issue_bill_item.xhtml" disabled="false"/>
 
-                                <p:commandButton styleClass="linkButton" ajax="false"
-                                                 value="Department Unit Issue by Item(Batch)" 
-                                                 action="store_unit_report_by_item.xhtml"/>
-                                <p:commandButton styleClass="linkButton" ajax="false"
-                                                 value="Department Unit Issue by Item" 
-                                                 action="store_unit_report_by_item_1.xhtml"/>
-                                <p:commandButton styleClass="linkButton" ajax="false"
-                                                 value="BHT Issue by Item" 
-                                                 action="store_report_bht_issue_by_item.xhtml" disabled="true"/>
-                                </h:panelGrid> 
+                                        <p:commandButton styleClass="linkButton" ajax="false"
+                                                         value="Department Unit Issue by Item(Batch)" 
+                                                         action="store_unit_report_by_item.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false"
+                                                         value="Department Unit Issue by Item" 
+                                                         action="store_unit_report_by_item_1.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false"
+                                                         value="BHT Issue by Item" 
+                                                         action="store_report_bht_issue_by_item.xhtml" disabled="true"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Unit Issue Category Wise Summery" action="store_report_unit_issue_bill_1.xhtml" actionListener="#{storeSaleReport.makeNull}"/>
+                                    </h:panelGrid> 
                                 </p:panel>
                             </h:panelGrid>
 
@@ -60,17 +61,17 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Sale Detail Report By Date" action="store_report_sale_by_date_detail" actionListener="#{storeSaleReport.makeNull}"/>
                                     </h:panelGrid>
                                 </p:panel>
-                                 <p:panel header="5) Purchase " style="width: 400px; height: auto" collapsed="true" toggleable="true">
+                                <p:panel header="5) Purchase " style="width: 400px; height: auto" collapsed="true" toggleable="true">
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Purchase Summary" action="store_report_purchase_detail" actionListener="#{storeSaleReport.makeNull}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Purchase Summary By Supplier" action="store_report_purchase_detail_by_supplier" actionListener="#{storeSaleReport.makeNull}"/>
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="8) Transfer Report " style="width: 400px; height: auto" collapsed="true" toggleable="true">                                    
-                                     <h:panelGrid columns="1" >
-                                     <p:commandButton styleClass="linkButton" ajax="false" value="Transfer Issue Summary Report By Date" action="store_report_issue_by_date_summery.xhtml" actionListener="#{storeSaleReport.makeNull}" disabled="true"/>
-                                 </h:panelGrid>
-                                 </p:panel>
+                                    <h:panelGrid columns="1" >
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Transfer Issue Summary Report By Date" action="store_report_issue_by_date_summery.xhtml" actionListener="#{storeSaleReport.makeNull}" disabled="true"/>
+                                    </h:panelGrid>
+                                </p:panel>
                             </h:panelGrid>
 
                             <h:panelGrid columns="1" >
@@ -88,8 +89,8 @@
                                 </p:panel>
                                 <p:panel header="9) Asset Transfer Report " style="width: 400px; height: auto" collapsed="true" toggleable="true">                                    
                                     <h:panelGrid columns="1" >
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Transfer Issue Summary Report By Date" action="store_report_asset_issue_summery.xhtml" actionListener="#{storeSaleReport.makeNull}" disabled="fasle"/>
-                                </h:panelGrid>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Transfer Issue Summary Report By Date" action="store_report_asset_issue_summery.xhtml" actionListener="#{storeSaleReport.makeNull}" disabled="fasle"/>
+                                    </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
                         </h:panelGrid>
