--- a/src/main/webapp/store/store_report_unit_issue_department_by_departmaent_item_vice.xhtml
+++ b/src/main/webapp/store/store_report_unit_issue_department_by_departmaent_item_vice.xhtml
@@ -48,7 +48,7 @@
                         </h:panelGrid>
 
 
-                        <h:panelGroup id="gpBillPreview" styleClass="summeryBorder" >
+                        <h:panelGroup id="gpBillPreview" styleClass="summeryBorder noBorder " >
 
 
                             <p:dataTable id="tbl"  value="#{storeReportsTransfer.drows}" var="i"  >
@@ -70,7 +70,7 @@
                                             </p:row>
                                             <p:row>
                                                 <p:column headerText="App. Rate" />
-                                                <p:column headerText="Value" />
+                                                <p:column headerText="Qty" />
                                                 <p:column headerText="Total" />
                                             </p:row>
                                         </p:columnGroup>
