--- a/src/main/webapp/pharmacy/pharmacy_error_checking_date_1.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_error_checking_date_1.xhtml
@@ -106,6 +106,9 @@
                         <p:column headerText="Ins Id" >                              
                             <h:outputLabel value="#{pb.bill.insId}" />
                         </p:column>
+                        <p:column headerText="Batch" >                              
+                            <h:outputLabel value="#{pb.pharmaceuticalBillItem.itemBatch.batchNo}" />
+                        </p:column>
 
                         <p:column headerText="Before" >
                             <h:outputLabel value="#{pb.pharmaceuticalBillItem.stockHistory.stockQty}"  />
